--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -30,7 +30,7 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
-/* mobile-large */
+/* mobile */
 @media all and (min-width: 0) and (max-width: 415px) and (orientation: portrait) {
   .container {
     max-width: 95%;
@@ -49,101 +49,4 @@
     padding-top: 0.5em;
     margin-bottom: 0;
   }
-
-  /* 
-
-
-
-  .albums {
-    width: 47%;
-    margin-bottom: 1em;
-  } */
-
-  /* 
-
-  .pageContainer {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: [image]auto [lSide] 1.5fr [rSide] auto;
-    padding-bottom: 1em;
-    margin-bottom: 2em;
-  }
-
-  .about {
-    grid-area: lSide;
-    text-align: center;
-  }
-
-  .links {
-    grid-area: rside;
-    text-align: center;
-  }
-
-  .header {
-    visibility: visible;
-    height: auto;
-    padding-top: 0.5em;
-    margin-bottom: 0;
-  }
-
-  h1 {
-    margin-bottom: 0.25em;
-  }
-
-  .image {
-    grid-area: image;
-    height: 150px;
-    width: 150px;
-    margin-left: calc(50% - 75px);
-    margin-bottom: 1em;
-  }
-
-  .image img {
-    height: 100%;
-    width: 100%;
-    background-position: 50%;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    border-radius: 50%;
-  } */
-}
-
-/* mobile-small-landscape */
-@media all and (min-width: 415px) and (max-width: 899px) and (orientation: landscape) {
-  /* .container {
-    max-width: 90%;
-  }
-
-  .pageContainer {
-    display: grid;
-    display: grid;
-    grid-template-columns: [lSide] 1.75fr [rSide] 1fr;
-  }
-
-  .header {
-    visibility: visible;
-    height: auto;
-    padding-top: 0.5em;
-    margin-bottom: 0;
-  }
-
-  .about {
-    grid-area: lSide;
-  }
-
-  .about p {
-    margin-right: 0.75em;
-  }
-
-  .links {
-    text-align: center;
-  }
-
-  .image {
-    grid-area: rSide;
-    height: 250px;
-    width: 250px;
-    margin-left: calc(50% - 125px);
-    margin-bottom: 1em;
-  } */
 }
