--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -1,10 +1,3 @@
-mat-sidenav-container {
-  /* width: 80%; */
-  /* max-width: 900px; */
-  /* margin: 0 auto 2em; */
-  /* padding: 0 2em; */
-}
-
 .sidenav-container {
   height: 100%;
 }
@@ -57,34 +50,9 @@ mat-sidenav-container {
   padding: 0;
   background-color: rgba(0, 0, 0, 0.8);
   height: 80px;
-  /* height: auto; */
   justify-content: space-around;
   align-items: flex-end;
-  /* background-color: #000; */
-  /* height: 200px; */
-  /* display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 3fr 0.5fr;
-  grid-template-areas:
-    "image text"
-    "image navigation"; */
 }
-
-/* .imageContainer {
-  grid-area: image;
-}
-
-.imageContainer img {
-  max-height: 100%;
-  margin-left: 10%;
-} */
-
-/* .info {
-  outline: 1px solid red;
-  grid-area: text;
-  text-align: right;
-  margin-right: 30%;
-} */
 
 .info h1 {
   font-size: 2em;
@@ -93,10 +61,6 @@ mat-sidenav-container {
 .info h1 a {
   color: #fff;
   text-decoration: none;
-}
-
-.info .subInfo {
-  /* outline: 1px solid yellow; */
 }
 
 .info .subInfo h4 {
@@ -121,9 +85,7 @@ mat-sidenav-container {
 
 .navigation {
   outline: 1px soild green;
-  /* grid-area: navigation; */
   vertical-align: bottom;
-  /* margin-right: 5%; */
   margin-top: 5%;
   margin-bottom: 0;
   height: 35px;
